another solutions for different domains

--- a/examples/index.htm
+++ b/examples/index.htm
@@ -10,13 +10,14 @@
     <button type="button" id="but1">error in nested function</button>
     <button type="button" id="but2">error in another script</button>
     <button type="button" id="but3">error in script from different domain</button>
+    <button type="button" id="but4">error in script from different domain (try-catch)</button>
 </p>
 <p>
     <button type="button" id="butDisable">disable custom handler</button>
     <button type="button" id="butEnable">enable custom handler</button>
 </p>
 
-<!-- error handler should be loaded before other scripts -->
+<!-- error handler should be loaded before other scripts. id="error-handler" is required -->
 <script src="../src/error_handler.js" id="error-handler" data-alert="true" data-log="http://test.local/js-error-handler/examples/log/logger.php"></script>
 
 <!-- alternative configuration
@@ -40,9 +41,22 @@ document.getElementById('but1').addEventListener('mousedown', function () {
 document.getElementById('but2').addEventListener('mousedown', function () {
     badFunction();
 });
+
+// show only "script error"
 document.getElementById('but3').addEventListener('mousedown', function () {
     differentDomainFunction();
 });
+
+// show more info, depends on browser
+document.getElementById('but4').addEventListener('mousedown', function () {
+    try {
+        differentDomainFunction();
+    } catch (e) {
+        console.log(e);
+        throw e;
+    }
+});
+
 
 document.getElementById('butDisable').addEventListener('mousedown', function () {
     window.alertOnError = false;
@@ -59,5 +73,11 @@ console.log(variable);
 </script>
 <script src="bad_script.js"></script>
 <script src="http://example.org/different_domain_script.js"></script>
+
+<!--
+alternative solution to get error from script on different domain, server must set header Access-Control-Allow-Origin: *
+<script src="http://example.org/different_domain_script.js" crossorigin="anonymous"></script>
+-->
+
 </body>
 </html>
